--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
           git add .
           git config --global user.email "limjunehyeop@gmail.com"
           git config --global user.name "Jonathan0827"
-          git commit -am "Farmer did something"
+          git commit -am "Farmer planted a tree"
           git push
