--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
           git add .
           git config --global user.email "limjunehyeop@gmail.com"
           git config --global user.name "Jonathan0827"
-          git commit -S -am "🌲🌲🌲"
+          git commit -am "🌲🌲🌲"
           git push
